--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <form id="login-form" action="http://localhost:3000/api/v1/sessions/login" method="post"
                                   role="form" style="display: block;">
                                 <div class="form-group">
-                                    <input type="text" name="user[email]" id="username" tabindex="1"
+                                    <input type="email  " name="user[email]" id="username" tabindex="1"
                                            class="form-control" placeholder="Email-ID" value="">
                                 </div>
                                 <div class="form-group">
@@ -67,25 +67,33 @@
                                            placeholder="Email Address" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="user[first_name]" id="username" tabindex="1"
+                                    <input type="text" name="user[first_name]" id="first_name" tabindex="1"
                                            class="form-control" placeholder="First Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="user[last_name]" id="username" tabindex="1"
+                                    <input type="text" name="user[last_name]" id="last_name" tabindex="1"
                                            class="form-control" placeholder="Last Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="user[company_name]" id="username" tabindex="1"
+                                    <input type="text" name="user[company_name]" id="company_name" tabindex="1"
                                            class="form-control" placeholder="Company Name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="user[country]" id="username" tabindex="1"
+                                    <input type="text" name="user[country]" id="country" tabindex="1"
                                            class="form-control" placeholder="Country" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="user[business_phone]" id="email" tabindex="1"
+                                    <input type="text" name="user[business_phone]" id="business_phone" tabindex="1"
                                            class="form-control" placeholder="Business Phone" value="">
                                 </div>
+                                <!--<div class="form-group">-->
+                                    <!--<input type="password" name="user[password]" id="password" tabindex="1"-->
+                                           <!--class="form-control" placeholder="Password" value="">-->
+                                <!--</div>-->
+                                <!--<div class="form-group">-->
+                                    <!--<input type="password" name="user[password_confirmation]" id="password_confirmation" tabindex="1"-->
+                                           <!--class="form-control" placeholder="Password Confirmation"">-->
+                                <!--</div>-->
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
