CSS and Javascript addition for validation

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
                             <form id="login-form" action="http://localhost:3000/api/v1/sessions/login" method="post"
                                   role="form" style="display: block;">
                                 <div class="form-group">
-                                    <input type="email  " name="user[email]" id="username" tabindex="1"
-                                           class="form-control" placeholder="Email-ID" value="">
+                                    <input type="email" name="user[email]" id="username" tabindex="1"
+                                           class="form-control" placeholder="Email-ID" value="" required = "">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="user[password]" id="password" tabindex="2"
-                                           class="form-control" placeholder="Password">
+                                    <!--<input type="password" name="user[password]" id="password" tabindex="2"-->
+                                           <!--class="form-control" placeholder="Password">-->
+                                    <label>Password Field is not available for a while as it is not present in registration form.</label>
                                 </div>
 
                                 <div class="form-group">
@@ -51,7 +52,7 @@
                                   role="form" style="display: none;">
                                 <div class="form-group">
                                     <input type="email" name="user[email]" id="email" tabindex="1" class="form-control"
-                                           placeholder="Email Address" value="">
+                                           placeholder="Email Address" value="" >
                                 </div>
                                 <div class="form-group">
                                     <input type="text" name="user[first_name]" id="first_name" tabindex="1"
@@ -100,6 +101,10 @@
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
 <script src="./javascript/app.js"></script>
 </body>
 </html>
+
+
+
